deployment-file/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: static-web-app
  template:
    metadata:
      labels:
        app: static-web-app
    spec:
      containers:
      - name: static-web-container
        image: <your-ecr-url>/static-html:latest # Replace with your ECR image URL
        ports:
        - containerPort: 80
